Bug 495371 - Shift-click works like Ctrl-click after "Trash" operation
Summary: Shift-click works like Ctrl-click after "Trash" operation
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 24.08.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 484766 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-10-26 08:56 UTC by Jin Liu
Modified: 2025-04-20 11:08 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screencast (576.04 KB, video/mp4)
2024-10-26 08:56 UTC, Jin Liu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jin Liu 2024-10-26 08:56:58 UTC
Created attachment 175248 [details]
screencast

STEPS TO REPRODUCE
1. Create 5 files named 1, 2, 3, 4, 5.
2. Click to select 1.
3. Press DEL to trash 1.
4. Now 2 is selected automatically.
5. Shift-click on 5

OBSERVED RESULT
2 and 5 are selected.

EXPECTED RESULT
2, 3, 4, 5 are selected

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.2.2
KDE Frameworks Version: 6.7.0
Qt Version: 6.8.0
Kernel Version: 6.11.5-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 5600H with Radeon Graphics
Memory: 15.0 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Comment 1 Akseli Lahtinen 2024-10-31 14:57:14 UTC
Can confirm the issue

dolphin 24.11.70 
Operating System: Fedora Linux 41
KDE Plasma Version: 6.2.80
KDE Frameworks Version: 6.8.0
Qt Version: 6.7.2
Kernel Version: 6.11.5-300.fc41.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15,5 GiB of RAM
Graphics Processor: AMD Radeon RX 6600
Comment 2 Bug Janitor Service 2024-11-20 10:38:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/859
Comment 3 Akseli Lahtinen 2024-11-21 12:42:49 UTC
Git commit fd3f4e5fc1d7360004299a9d5ffa9b5571e7b1e9 by Akseli Lahtinen.
Committed on 21/11/2024 at 12:42.
Pushed by akselmo into branch 'master'.

DolphinView: beginAnchoredSelection after setSelected in selectNextItem

Currently when next item is set selected, it's not set as an anchor.
This means that shift-click will not select items between the selection
and the next item, and instead behaves like ctrl-click. 
This is rather inconsistent behavior.

We should set the next selected item as an anchor so that shift-click
will work: This change starts the `beginAnchoredSelection`
process after `setSelection`.

For example, if user trashes an item and the next item is selected,
shift-click would stop working. 

M  +1    -0    src/views/dolphinview.cpp

https://invent.kde.org/system/dolphin/-/commit/fd3f4e5fc1d7360004299a9d5ffa9b5571e7b1e9
Comment 4 Patrick Silva 2025-04-20 11:08:57 UTC
*** Bug 484766 has been marked as a duplicate of this bug. ***